# tenuki

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  tests.yml
tenuki/: opengotha.py
tests/: test_opengotha.py
tests/data/opengotha/: tournament_export.xml
