[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "tenuki"
version = "0.2.0"
description = "A set of development tools for go/baduk/wéiqí projects."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Konrad Hałas", email = "halas.konrad@gmail.com" }
]
license = { text = "MIT" }
dependencies = []

[tool.black]
line-length = 120

[project.optional-dependencies]
dev = ["pytest", "black", "mypy", "xmldiff"]

